# SMPL_Test

./: README.md
SMPL_CPP/: CMakeLists.txt  build.bat  frame1verts.csv  main - backup_1.cpp  main - backup_2.cpp  main - backup_3.cpp  main - backup_4.cpp  main - backup_5_checkpoint.cpp  main.cpp  walking_20240125.json
SMPL_Matlab/: main.m  main_by_jongheyon.m  mat2npz.py  modelmat2json.m
SMPL_PYD/: CMakeLists.txt  PySMPL.cp310-win_amd64.pyd  README_Build및실행방법.txt  README_Successful_Build_Log.txt  build.bat  main.py  main_with_timecheck.py  py_smpl_bind.cpp  smpl_model.cpp  smpl_model.h
